--- a/app/views/activeresponders/index.html.erb
+++ b/app/views/activeresponders/index.html.erb
@@ -35,9 +35,10 @@
                 <th style="width: 10px">Heart Rate</th>
                 <th style="width: 10px">Location</th>
               </tr>
+              <% Responder.all.each do |responder| %>
 
-              <tr style="background-color: whitesmoke">
-                <td id="name_1" style="text-align: center"></td>
+              <tr style="bacdd`kground-color: whitesmoke">
+                <td id="name_1" style="text-align: center"><%=responder.r_name%></td>
                 <td>
                   <div class="progress progress-xs" style="background-color: lightgray">
                     <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
@@ -56,7 +57,8 @@
                   <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
                 </td>
               </tr>
-
+              <%end%>
+<!--
               <tr>
                 <td id="name_1" style="text-align: center"></td>
                 <td>
@@ -76,7 +78,7 @@
                   <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
                   <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
                 </td>
-              </tr>
+              </tr>-->
 
             </table>
           </div><!-- /.box-body -->
@@ -95,15 +97,6 @@
           </div>
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
-
-<script>
-  var name1= hi;
-  if (name1 === undefined) {
-      document.getElementById("name_1").innerHTML = ' ';
-  }else{
-      document.getElementById("name_1").innerHTML = name1;
-  }
-</script>
 
 
 
