adding popup code

--- a/app/views/respondersgps/index.html.erb
+++ b/app/views/respondersgps/index.html.erb
@@ -53,7 +53,8 @@
       <%= respondern.lat %>
       <%= respondern.long %>
 
-    <div id="res-info<%= index +1 %>"data-lat="<%= respondern.lat %>"data-long="<%= respondern.long %>">
+    <div id="res-info<%= index +1 %>"data-lat="<%= respondern.lat %>"
+         data-long="<%= respondern.long %>"data-time="<%= respondern.n_time %>">
     </div>
 
     <%end%>
