--- a/app/views/activeresponders/index.html.erb
+++ b/app/views/activeresponders/index.html.erb
@@ -36,25 +36,25 @@
                 <th style="width: 10px">Location</th>
               </tr>
               <% Responder.all.each do |responder| %>
-
+                <%=responder.responder_id%>
               <tr style="bacdd`kground-color: whitesmoke">
                 <td id="name_1" style="text-align: center"><%=responder.r_name%></td>
                 <td>
                   <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
+                    <div id="bodyb" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
-                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
+                  <span id="body" class="badge bg-warning" style="background-color: green">0°F</span>
                 </td>
                 <td>
                   <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
+                    <div id="heartb" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
-                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
+                  <span id="heart" class="badge bg-warning" style="background-color: green">0bpm</span>
                 </td>
                 <td style="text-align: center">
                   <i class="fa fa-street-view"></i><br>
-                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
-                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
+                  <div id="la" style="font-size: 12px; text-align: left">La:</div>
+                  <div id="lo" style="font-size: 12px; text-align: left">Lo:</div>
                 </td>
               </tr>
               <%end%>
