--- a/app/views/vehiclegps/index.html.erb
+++ b/app/views/vehiclegps/index.html.erb
@@ -44,8 +44,9 @@
             <div id="mapid" style="height:97vh;box-shadow: 5px 5px 10px lightgray;">
             </div>
           </div>
-          <% Vehiclenode.all.each_with_index do |vehNode,index| %>
-            <div id="res-info<%= index +1 %>"data-lat="<%=vehNode.lat %>"data-long="<%= vehNode.long %>">
+          <% Vehiclenode.all.each_with_index do |vehNode, index| %>
+            <div id="veh-info<%= index +1 %>"data-lat="<%=vehNode.lat %>"
+                 data-long="<%= vehNode.long %>">
             </div>
           <%end%>
         </div>
