--- a/app/views/vehiclegps/index.html.erb
+++ b/app/views/vehiclegps/index.html.erb
@@ -45,8 +45,8 @@
             </div>
           </div>
           <% Vehiclenode.all.each_with_index do |vehNode, index| %>
-            <div id="veh-info<%= index +1 %>"data-lat="<%=vehNode.lat %>"
-                 data-long="<%= vehNode.long %>">
+            <div id="veh-info<%= index +1 %>" data-lat="<%=vehNode.lat %>"
+                 data-long="<%= vehNode.long %>" data-time="<%= vehNode.n_time %>">
             </div>
           <%end%>
         </div>
