--- a/app/views/respondersgps/index.html.erb
+++ b/app/views/respondersgps/index.html.erb
@@ -51,7 +51,8 @@
     <script src="/plugins/maps/mapBase.js"></script>
     <% Respondernode.all.each_with_index do |resNode, index| %>
     <div id="res-info<%= index +1 %>" data-lat="<%= resNode.lat %>"
-         data-long="<%= resNode.long %>" data-time="<%= resNode.n_time %>"data-time="<%= resNode.r_name %>">
+         data-long="<%= resNode.long %>" data-time="<%= resNode.n_time %>"
+         data-name="<%= resNode.r_name %>">
     </div>
 
     <%end%>
