--- a/app/views/activeresponders/index.html.erb
+++ b/app/views/activeresponders/index.html.erb
@@ -35,29 +35,44 @@
                 <th style="width: 10px">Heart Rate</th>
                 <th style="width: 10px">Location</th>
               </tr>
-              <% Responder.all.each do |responder| %>
-                <%=responder.responder_id%>
-              <tr style="bacdd`kground-color: whitesmoke">
-                <td id="name_1" style="text-align: center"><%=responder.r_name%></td>
+              <% Respondernode.all.each_with_index do |respondernode,index| %>
+              <tr style="background-color: whitesmoke">
+                <td id="name" style="text-align: center"><%=respondernode.r_name%></td>
                 <td>
-                  <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="bodyb" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
-                  </div>
-                  <span id="body" class="badge bg-warning" style="background-color: green">0°F</span>
+                  <span id="temp<%= index +1 %>" class="badge bg-warning" style="background-color: green"><%=respondernode.n_temp%>°F</span>
                 </td>
                 <td>
-                  <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="heartb" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
-                  </div>
-                  <span id="heart" class="badge bg-warning" style="background-color: green">0bpm</span>
+                  <span id="heart<%= index +1 %>" class="badge bg-warning" style="background-color: green"><%=respondernode.heartrate%> BPM</span>
                 </td>
                 <td style="text-align: center">
                   <i class="fa fa-street-view"></i><br>
-                  <div id="la" style="font-size: 12px; text-align: left">La:</div>
-                  <div id="lo" style="font-size: 12px; text-align: left">Lo:</div>
+                  <div id="la" style="font-size: 12px; text-align: left">La: <%=respondernode.lat%></div>
+                  <div id="lo" style="font-size: 12px; text-align: left">Lo: <%=respondernode.long%></div>
                 </td>
+
               </tr>
               <%end%>
+            </table>
+          </div><!-- /.box-body -->
+          <div class="box-footer no-padding">
+            <div class="mailbox-controls">
+              <div class="btn-group">
+              </div>
+                <div class="pull-right">
+                  1-10/200
+                <div class="btn-group">
+                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
+                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
+                </div><!-- /.btn-group -->
+              </div><!-- /.pull-right -->
+            </div>
+          </div>
+
+  </section><!-- /.content -->
+</div><!-- /.content-wrapper -->
+
+
+
 <!--
               <tr>
                 <td id="name_1" style="text-align: center"></td>
@@ -79,24 +94,6 @@
                   <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
                 </td>
               </tr>-->
-
-            </table>
-          </div><!-- /.box-body -->
-          <div class="box-footer no-padding">
-            <div class="mailbox-controls">
-              <div class="btn-group">
-              </div>
-                <div class="pull-right">
-                  1-10/200
-                <div class="btn-group">
-                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
-                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
-                </div><!-- /.btn-group -->
-              </div><!-- /.pull-right -->
-            </div>
-          </div>
-  </section><!-- /.content -->
-</div><!-- /.content-wrapper -->
 
 
 
