--- a/app/views/overviewmap/index.html.erb
+++ b/app/views/overviewmap/index.html.erb
@@ -20,7 +20,7 @@
     <div id="mapid"style="height:100vh;">
     </div>
 
-    <script src="/plugins/maps/mapBase.js"></script>
+    <script src="/plugins/maps/mapBase2.js"></script>
     <script src="/plugins/maps/map1.js"></script>
 
   </section><!-- /.content -->
