--- a/app/views/respondersgps/index.html.erb
+++ b/app/views/respondersgps/index.html.erb
@@ -55,7 +55,7 @@
     </div>
     <%end%>
 
-    <script src="/plugins/maps/mapBase1.js"></script>
+    <script src="/plugins/maps/mapBaseR.js"></script>
     <script src="/plugins/maps/rMap.js"></script>
 
 
