--- a/app/views/vehiclegps/index.html.erb
+++ b/app/views/vehiclegps/index.html.erb
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <script src="/plugins/maps/mapBase.js"></script>
+    <script src="/plugins/maps/mapBaseV.js"></script>
     <script src="/plugins/maps/vMap.js"></script>
 
   </section><!-- /.content -->
