adding layers to vehicle map

--- a/app/views/overviewmap/index.html.erb
+++ b/app/views/overviewmap/index.html.erb
@@ -21,7 +21,7 @@
     </div>
 
     <script src="/plugins/maps/mapBaseO.js"></script>
-    <script src="/plugins/maps/map1.js"></script>
+    <script src="/plugins/maps/oMap.js"></script>
 
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
