--- a/app/views/overviewmap/index.html.erb
+++ b/app/views/overviewmap/index.html.erb
@@ -5,23 +5,6 @@
 <% end %>
 
 <div class="content-wrapper dashboard-page">
-  <section class="content-header">
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <h1 class="page-title">
-          Overview Map
-        </h1>
-
-      </div>
-    </div>
-  </section>
-  <!-- Main content -->
-  <section class="content">
-    <div id="mapid"style="height:100vh;">
-    </div>
-
-    <script src="/plugins/maps/mapBaseO.js"></script>
-    <script src="/plugins/maps/map1.js"></script>
-
-  </section><!-- /.content -->
-</div><!-- /.content-wrapper -->
+  <%=render 'header'%>
+  <%=render 'body'%>
+</div>
