--- a/app/views/activeresponders/index.html.erb
+++ b/app/views/activeresponders/index.html.erb
@@ -1,99 +1,11 @@
-<% content_for :before_scripts do %>
-<link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
-<% end %>
-
 <div class="content-wrapper dashboard-page">
-  <section class="content-header">
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <h1 class="page-title">
-          Active Responders
-        </h1>
-
-      </div>
-    </div>
-  </section>
-  <!-- Main content -->
+  <%= render 'header' %>
   <section class="content">
-        <form action="#" method="get">
-          <div class="input-group input-group-lg">
-            <input type="text" name="q" class="form-control" placeholder="Search...">
-            <span class="input-group-btn">
-              <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                <i class="fa fa-search"></i>
-              </button>
-            </span>
-          </div>
-        </form>
-
+        <%= render 'search' %>
         <div class="box" data-aos="fade-up">
-          <div class="box-body">
-            <table id="rs_data_td" class="table table-no-bordered">
-              <tr style="background-color: #234ec5; color: white">
-                <th style="width: 10px">Responder</th>
-                <th style="width: 10px">Temp</th>
-                <th style="width: 10px">Heart Rate</th>
-                <th style="width: 10px">Location</th>
-              </tr>
-              <% Respondernode.all.each_with_index do |respondernode,index| %>
-              <tr style="background-color: whitesmoke">
-                <td id="name" style="text-align: center"><%=respondernode.r_name%></td>
-                <td>
-                  <span id="temp<%= index +1 %>" class="badge bg-warning" style="background-color: green"><%=respondernode.n_temp%>°F</span>
-                </td>
-                <td>
-                  <span id="heart<%= index +1 %>" class="badge bg-warning" style="background-color: green"><%=respondernode.heartrate%> BPM</span>
-                </td>
-                <td style="text-align: center">
-                  <i class="fa fa-street-view"></i><br>
-                  <div id="la" style="font-size: 12px; text-align: left">La: <%=respondernode.lat%></div>
-                  <div id="lo" style="font-size: 12px; text-align: left">Lo: <%=respondernode.long%></div>
-                </td>
-
-              </tr>
-              <%end%>
-            </table>
-          </div><!-- /.box-body -->
-          <div class="box-footer no-padding">
-            <div class="mailbox-controls">
-              <div class="btn-group">
-              </div>
-                <div class="pull-right">
-                  1-10/200
-                <div class="btn-group">
-                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
-                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
-                </div><!-- /.btn-group -->
-              </div><!-- /.pull-right -->
-            </div>
+          <div class="box-body" id="table1">
+            <%= render 'table' %>
           </div>
-
-  </section><!-- /.content -->
-</div><!-- /.content-wrapper -->
-
-
-
-<!--
-              <tr>
-                <td id="name_1" style="text-align: center"></td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
-                  </div>
-                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
-                  </div>
-                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
-                </td>
-                <td style="text-align: center">
-                  <i class="fa fa-street-view"></i><br>
-                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
-                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
-                </td>
-              </tr>-->
-
-
-
+        </div>
+  </section>
+</div>
