--- a/app/views/respondersgps/index.html.erb
+++ b/app/views/respondersgps/index.html.erb
@@ -3,62 +3,9 @@
   <link rel="stylesheet" href="/plugins/leaflet/leaflet.css"
   <link rel="stylesheet" href="/plugins/leaflet/maps.css"
   <script src="/plugins/leaflet/leaflet.js"></script>
-<% end %>
+<%end%>
 <div class="content-wrapper dashboard-page">
-  <section class="content-header">
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <h1 class="page-title">
-          Responders GPS
-        </h1>
-
-      </div>
-    </div>
-  </section>
-  <!-- Main content -->
-  <section class="content" style="height: 100vh">
-
-  <div class="row">
-    <div class= "col-xs-12" style="top: 15px; width: 96%; left:4%">
-      <div class="row">
-        <div class="col-xs-4">
-          <div class="box" style="height: 97vh; overflow: auto">
-            <div class="list-group">
-              <a class="list-group-item list-group-item-action active"> Responders: </a>
-              <form action="#" method="get">
-                <div class="input-group input-group-sm">
-                  <input type="text" name="q" class="form-control" placeholder="Search...">
-                  <span class="input-group-btn">
-                    <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                      <i class="fa fa-search"></i>
-                    </button>
-                  </span>
-                </div>
-              </form>
-              <% Responder.all.each do |responder| %>
-              <button type="button" class="list-group-item list-group-item-action" style="text-align: center"><%= responder.r_name%></button>
-              <%end%>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-8" style="left: -30px">
-          <div id="mapid" style="height:97vh;box-shadow: 5px 5px 10px lightgray;">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-    <% Respondernode.all.each_with_index do |resNode, index| %>
-    <div id="res-info<%= index +1 %>" data-lat="<%= resNode.lat %>"
-         data-long="<%= resNode.long %>" data-time="<%= resNode.n_time %>"
-         data-name="<%= resNode.r_name %>">
-    </div>
-    <%end%>
-
-    <script src="/plugins/maps/mapBaseR.js"></script>
-    <script src="/plugins/maps/rMap.js"></script>
-
-
-  </section><!-- /.content -->
-</div><!-- /.content-wrapper -->
+  <%= render 'header' %>
+  <%= render 'body' %>
+</div>
 
