realtime work map responder

--- a/app/views/respondersgps/_body.html.erb
+++ b/app/views/respondersgps/_body.html.erb
@@ -14,8 +14,10 @@
           </div>
         </div>
         <div class="col-xs-8" style="left: -30px">
-          <div id="map">
-            <%= render 'map' %>
+          <div id="mapid" style="height:97vh;box-shadow: 5px 5px 10px lightgray;">
+            <div id="map1">
+              <%= render 'map' %>
+            </div>
           </div>
         </div>
       </div>
