--- a/app/views/vehiclegps/_map.html.erb
+++ b/app/views/vehiclegps/_map.html.erb
@@ -102,7 +102,7 @@
 
     }//end for
 
-  for (i = 1; i <k; i++) {
+  for (i = 0; i < vehArray.length; i++) {
       vehArray[i].addTo(vehLayer);
   }
   vehLayer.addTo(mymap);
