--- a/app/views/respondersgps/_map.html.erb
+++ b/app/views/respondersgps/_map.html.erb
@@ -10,7 +10,8 @@
 
     var resLayer = new L.layerGroup([]);
     var resArray = [];
-    var i, k;
+    resArray.length = 0;
+    var i, marker;
 
     for (i = 1; i < 1000; i++) {
         var lt = $('#res-info' + i).data('lat');
@@ -22,17 +23,27 @@
         if (lt === undefined) {
             i = 1000;
         } else {
-            k = i;
-            rID = L.marker([lt, lo], {icon: firefighterIcon}, {riseOnHover: true}).bindPopup(name + '<br>Organization<br>Loc: ' + lt + ', ' + lo + '<br>Last Update: ' + time);
+            marker = L.marker([lt, lo], {icon: firefighterIcon}, {myCustomId: rID}, {riseOnHover: true});
+            marker.bindPopup(name + '<br>Organization<br>Loc: ' + lt + ', ' + lo + '<br>Last Update: ' + time);
+            //marker.addTo(mymap);
         }//end
-        resArray.push(rID);
+        resArray.push(marker);
     }//end for loop
 
-
-    for (i = 1; i < k; i++) {
-        resArray[i].addTo(resLayer);
+    /*
+    for (i = 0; i < resArray.length; i++) {
+        //mymap.removeLayer(resArray[i]);
+        //mymap.update(resArray[i]);
+        resArray[i].remove(mymap);
     }
-    resLayer.addTo(mymap);
+*/
+
+    for (i = 0; i < resArray.length; i++) {
+        resArray[i].addTo(mymap);
+    }
+
+   // mymap.update(resLayer);
+    //resLayer.addTo(mymap);
 
     //resLayer.remove();
 
