--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -15,12 +15,10 @@
     <!-- Default box -->
     <div class="box">
     <img src="/plugins/images/fire_fighter.jpg" style="width: 100%; height: 100vh;">
-    <div style="position: absolute; top: 50%; left: 50%; color: white;"  <br><br>
-      ResqueMe is a browser based application designed to facilitate communication, coordination, collaboration,
-      <br>
-      and situational awareness during large scale disasters. The concept was inspired following the destruction of
-      <br>
-      hurricanes Harvey, Irma, and Maria. The developers are Zach Newman and Joseph Tye.
+    <div style="position: absolute; top: 30px; left: 55px;color: white;"  <br><br>
+      ResqueMe is a browser based application designed to facilitate <br>communication, coordination, collaboration,
+      and situational <br>awareness during large scale disasters. The concept was inspired <br>following the destruction of
+      hurricanes Harvey, Irma, and Maria. <br>The developers are Zach Newman and Joseph Tye.
       <br><br>
       Contact: resqueme@protonmail.com
     </div>
