--- a/app/views/overviewmap/_map.html.erb
+++ b/app/views/overviewmap/_map.html.erb
@@ -1,75 +1,24 @@
-<div id="mapid"style="height:100vh;"></div>
+<% Vehiclenode.all.each_with_index do |vehNode, index| %>
+  <div id="veh-info<%= index +1 %>" data-lat="<%=vehNode.lat %>"
+       data-long="<%= vehNode.long %>" data-time="<%= vehNode.n_time %>"
+       data-type="<%= vehNode.v_type %>" data-make="<%= vehNode.make %>"
+       data-model="<%= vehNode.model %>" data-vehicle_id="<%= vehNode.vehicle_id %>"></div>
+<%end%>
+
+
 <script>
-
-    L.Map.include({
-        'clearLayers':function() {
-            this.eachLayer(function (layer) {
-                this.removeLayer(layer);
-            }, this);
-        }
-    });
-
-
-    var mymap = L.map('mapid').setView([33.21, -97.13],13);
-    L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v9/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
-        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-        maxZoom: 20,
-        id: 'mapbox.satellite-streets',
-        accessToken: 'pk.eyJ1IjoicmVzcXVlbWUiLCJhIjoiY2pkZG91aDNuMDRsMDJ3bmpnOGJpNGNlNyJ9.hwp2QeD6easWjlAlaEIJ2w'
-    }).addTo(mymap);
-
-    mymap.locate({
-        watch: false,
-        setView: false,
-        enableHighAccuracy: true
-    });
-
-    function onLocationFound(e) {
-        mymap.panTo(e.latlng);
-        L.marker(e.latlng, {icon: circleIcon}).addTo(mymap).bindPopup('Current location: ' + e.latlng.lat.toPrecision(6) + ', ' + e.latlng.lng.toPrecision(6));
-    }
-    mymap.on('locationfound', onLocationFound);
-
-    var myIcon = L.Icon.extend({
-        popupAnchor:  [15, 0]
-    });
-
-    var zombieIcon = new myIcon({iconUrl: '/plugins/leaflet/images/zombie-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var tsunamiIcon = new myIcon({iconUrl: '/plugins/leaflet/images/tsunami-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var truckIcon = new myIcon({iconUrl: '/plugins/leaflet/images/truck-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var treedownIcon = new myIcon({iconUrl: '/plugins/leaflet/images/treedown-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var tornadoIcon = new myIcon({iconUrl: '/plugins/leaflet/images/tornado-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var skullIcon = new myIcon({iconUrl: '/plugins/leaflet/images/skull-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var sarIcon = new myIcon({iconUrl: '/plugins/leaflet/images/sar-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var policeIcon = new myIcon({iconUrl: '/plugins/leaflet/images/police-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var personIcon = new myIcon({iconUrl: '/plugins/leaflet/images/person-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var heloIcon = new myIcon({iconUrl: '/plugins/leaflet/images/helo-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var floodIcon = new myIcon({iconUrl: '/plugins/leaflet/images/flood-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var firefighterIcon = new myIcon({iconUrl: '/plugins/leaflet/images/firefighter-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var fireIcon = new myIcon({iconUrl: '/plugins/leaflet/images/fire-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var earthquakeIcon = new myIcon({iconUrl: '/plugins/leaflet/images/earthquake-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var carIcon = new myIcon({iconUrl: '/plugins/leaflet/images/car-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var boatIcon = new myIcon({iconUrl: '/plugins/leaflet/images/boat-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var avalancheIcon = new myIcon({iconUrl: '/plugins/leaflet/images/avalanche-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var ambulanceIcon = new myIcon({iconUrl: '/plugins/leaflet/images/ambulance-icon.png', iconSize: [32, 40], iconAnchor: [16,40]});
-    var circleIcon = new myIcon({iconUrl: '/plugins/leaflet/images/fa-dot-circle.png', iconSize: [32, 32], iconAnchor: [16,16]});
-
-
-</script>
-<script>
-
-    ovrLayer.clearLayers();
+    vehLayer.clearLayers();
 
     var i, marker;
 
-    for (i = 1; i < 1000; i++) {
-        var lt = $('#ovr-info' + i).data('lat');
-        var lo = $('#ovr-info' + i).data('long');
-        var time = $('#ovr-info' + i).data('time');
-        var type = $('#ovr-info' + i).data('type');
-        var make = $('#ovr-info' + i).data('make');
-        var model = $('#ovr-info' + i).data('model');
-        var vID = $('#ovr-info' + i).data('vehicle_id');
+    for (i = 1; i < 1000; i++){
+        var lt = $('#veh-info'+i).data('lat');
+        var lo = $('#veh-info'+i).data('long');
+        var time = $('#veh-info'+i).data('time');
+        var type = $('#veh-info'+i).data('type');
+        var make = $('#veh-info'+i).data('make');
+        var model = $('#veh-info'+i).data('model');
+        var vID = $('#veh-info'+i).data('vehicle_id');
 
         if (lt === undefined) {
             i = 1000;
@@ -86,46 +35,49 @@
                 marker = L.marker([lt, lo], {icon: policeIcon}, {riseOnHover: true});
             } else if (type == 'helo') {
                 marker = L.marker([lt, lo], {icon: heloIcon}, {riseOnHover: true});
-            } else if (type == 'avalanche') {
-                marker = L.marker([lt, lo], {icon: avalancheIcon}, {riseOnHover: true});
-            } else if (type == 'fire') {
-                marker = L.marker([lt, lo], {icon: fireIcon}, {riseOnHover: true});
-            } else if (type == 'earthquake') {
-                marker = L.marker([lt, lo], {icon: earthquakeIcon}, {riseOnHover: true});
-            } else if (type == 'flood') {
-                marker = L.marker([lt, lo], {icon: floodIcon}, {riseOnHover: true});
-            } else if (type == 'person') {
-                marker = L.marker([lt, lo], {icon: personIcon}, {riseOnHover: true});
-            } else if (type == 'sar') {
-                marker = L.marker([lt, lo], {icon: sarIcon}, {riseOnHover: true});
-            } else if (type == 'tornado') {
-                marker = L.marker([lt, lo], {icon: tornadoIcon}, {riseOnHover: true});
-            } else if (type == 'skull') {
-                marker = L.marker([lt, lo], {icon: skullIcon}, {riseOnHover: true});
-            } else if (type == 'treedown') {
-                marker = L.marker([lt, lo], {icon: treedownIcon}, {riseOnHover: true});
-            } else if (type == 'tsunami') {
-                marker = L.marker([lt, lo], {icon: tsunamiIcon}, {riseOnHover: true});
-            } else if (type == 'zombie') {
-                marker = L.marker([lt, lo], {icon: zombieIcon}, {riseOnHover: true});
             } else {
                 marker = L.marker([lt, lo], {icon: carIcon}, {riseOnHover: true});
             }
             marker.bindPopup('Make: ' + make + '<br>Model: ' + model + '<br>Loc: ' + lt + ', ' + lo + '<br>Last Update: ' + time);
-            marker.addTo(ovrLayer);
+            marker.addTo(vehLayer);
         }//end else
 
     }//end for
 
-    ovrLayer.addTo(mymap);
+    vehLayer.addTo(mymap);
 
-    //popup on map click
-    var cliPopup = L.popup();
-    function onMapClick(e) {
-        cliPopup
-            .setLatLng(e.latlng)
-            .setContent('You clicked at ' + e.latlng.lat.toPrecision(6) + ', ' + e.latlng.lng.toPrecision(6))
-            .openOn(mymap);
-    }
-    mymap.on('click', onMapClick);
+</script>
+
+
+<% Respondernode.all.each_with_index do |resNode, index| %>
+  <div id="res-info<%= index +1 %>" data-lat="<%= resNode.lat %>"
+       data-long="<%= resNode.long %>" data-time="<%= resNode.n_time %>"
+       data-name="<%= resNode.r_name %>" data-responder_id="<%= resNode.responder_id %>">
+  </div>
+<%end%>
+
+<script>
+    resLayer.clearLayers();
+
+    var i, marker;
+
+    for (i = 1; i < 1000; i++) {
+        var lt = $('#res-info' + i).data('lat');
+        var lo = $('#res-info' + i).data('long');
+        var name = $('#res-info' + i).data('name');
+        var time = $('#res-info' + i).data('time');
+        var rID = $('#res-info' + i).data('responder_id');
+
+        if (lt === undefined) {
+            i = 1000;
+        } else {
+            marker = L.marker([lt, lo], {icon: firefighterIcon}, {myCustomId: rID}, {riseOnHover: true});
+            marker.bindPopup(name + '<br>Organization<br>Loc: ' + lt + ', ' + lo + '<br>Last Update: ' + time);
+            marker.addTo(resLayer);
+        }//end
+
+    }//end for loop
+
+    resLayer.addTo(mymap);
+
 </script>
